Try fix flickering tooltip for the last game on the Games page

--- a/agot-bg-website/static/style.css
+++ b/agot-bg-website/static/style.css
@@ -34,3 +34,7 @@ td.fitwidth {
     width: 1px;
     white-space: nowrap;
 }
+
+.tooltip {
+    pointer-events: none;
+}
